--- a/html/false-break-out.html
+++ b/html/false-break-out.html
@@ -64,7 +64,7 @@ As we can see in this chart, not only did the false breakout signal a down move,
 Original source : <a href="https://priceaction.com/price-action-university/strategies/false-break-out/">https://priceaction.com/price-action-university/strategies/false-break-out/</a><br />
 <br />
 <!-- 하단 -->
-<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/treasurytrader"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
+<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/ssfutures"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
 <script src="footer.js"></script>
 </body>
 </html>
