--- a/html/price-action-breakout-strategies.html
+++ b/html/price-action-breakout-strategies.html
@@ -55,7 +55,7 @@ Here’s another example of trading a price action pattern breakout from a key c
 Original source : <a href="https://priceaction.com/price-action-university/beginners/price-action-breakout-strategies/">https://priceaction.com/price-action-university/beginners/price-action-breakout-strategies/</a><br />
 <br />
 <!-- 하단 -->
-<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/treasurytrader"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
+<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/ssfutures"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
 <script src="footer.js"></script>
 </body>
 </html>
