--- a/html/price-action-reversal-strategies.html
+++ b/html/price-action-reversal-strategies.html
@@ -69,7 +69,7 @@ The next chart below, shows an example of a counter-trend fakey reversal sell si
 Original source : <a href="https://priceaction.com/price-action-university/beginners/price-action-reversal-strategies/">https://priceaction.com/price-action-university/beginners/price-action-reversal-strategies/</a><br />
 <br />
 <!-- 하단 -->
-<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/treasurytrader"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
+<div id="footer"></div><footer><hr /><p><a href="#top">처음으로</a></p><div style="bottom: 20px; position: fixed; right: 20px;"><a href="https://t.me/ssfutures"><img height="50" src="t_logo_2x.png" width="50" /></a></div></footer>
 <script src="footer.js"></script>
 </body>
 </html>
