--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,16 @@
 <header><a name="top"></a><p><h3 id="title"></h3></p><hr /></header><div id="header"></div>
 <!-- 상단 -->
 <ul>
+  <li><a href="https://www.cmegroup.com/ko/tools-information/find-a-broker.html">한국 CME 브로커</a></li>
+  <li><a href="https://www.cmegroup.com/ko/files/leading-products-update-2014-q3.pdf">CME Group 주요 상품 및 자산군 개요</a></li>
+  <li><a href="https://www.cmegroup.com/ko/insights/economic-research/2024/four-factors-driving-gold-prices-relative-to-silver.html">금/은 가격 비율을 움직이는 4가지 요인</a></li>
+  <li><a href="https://support.ninjatrader.com/s/article/How-do-I-register-for-data-feeds-for-my-account?language=en_US">Subscribing to Market Data</a></li>
+  <li><a href="https://support.ninjatrader.com/s/article/How-Can-I-Find-Non-Professional-Monthly-Data-Rates?language=en_US">Non-Professional Monthly Data Rates</a></li>
+  <li><a href="https://forum.ninjatrader.com/forum/suggestions-and-feedback/suggestions-and-feedback-aa/107774-plans-for-telegram-support/page2#post1167645">Plans for Telegram Support</a></li>
+  <li><a href="https://www.libhunt.com/topic/image-viewer">Top 23 image-viewer Open-Source Projects</a></li>
+</ul>
+<hr />
+<ul>
   <h3>Price Action (사이트 증발에 대비한 복제)</h3>
 </ul>
 <ul>
